<resources>
    <string name="app_name">Athlete Monitor System</string>
    <string name="view_welcome">Welcome</string>
    <string name="view_Signup">Sign up</string>
    <string name="mail_hint">E-mail address</string>
    <string name="pass_hint">Password</string>
    <string name="login">Login</string>
    <string name="rePassword">Re-enter password</string>
    <string name="id">Name</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="coach">COACH</string>
    <string name="athlete">Athlete</string>
    <string name="release_training_plan">Release Training Plan</string>
    <string name="update_leaderboard">Update Leaderboard</string>
    <string name="talk_to_the_athlete">Talk to the athlete</string>
    <string name="search">Search</string>
    <string name="search_text">Please input the product name</string>
    <string name="sample">sample</string>
    <string name="add">Add</string>
    <string name="cart">Cart</string>
    <string name="title_calender">Calendar</string>
    <string name="title_leaderboard">LeaderBoard</string>
    <string name="title_chat">Chat Room</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_ahlete">MainActivity</string>
    <string name="athlete_chat">Athlete:</string>
    <string name="send">send</string>
    <string name="friday">FRI.</string>
    <string name="wednesday">WED.</string>
    <string name="monday">MON.</string>
    <string name="username">userName</string>
    <string name="_1">1:</string>
    <string name="_2">2:</string>
    <string name="_3">3:</string>
    <string name="_4">4:</string>
    <string name="_5">5:</string>
    <string name="upload">UPLOAD</string>
    <string name="title_health">Health</string>
    <string name="search_name">Search name</string>
    <string name="fat_mass">FAT MASS(kg):</string>
    <string name="muscle_mass">MUSCLE MASS(kg):</string>
    <string name="waist_line">WAIST LINE(cm):</string>
    <string name="weight">WEIGHT(kg):</string>
    <string name="height">HEIGHT(cm):</string>
    <string name="name">NAME:</string>
    <string name="chat_room_1">Chat Room 1</string>
    <string name="chat_room_2">Chat Room 2</string>
    <string name="chat_room_3">Chat Room 3</string>
    <string name="chat_room_4">Chat Room 4</string>
    <string name="reminder">Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">Content</string>
    <string name="submit2">submit</string>
    <string name="add2">add</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="music">Music</string>
</resources>
