<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_coach_nevigation"
    app:startDestination="@id/nav_coach_Calender">

    <fragment
        android:id="@+id/nav_coach_Calender"
        android:name="com.example.athlete_monitor_system.Coach_Sys.coach_Calendar_Frag"
        android:label="@string/title_calender"
        tools:layout="@layout/fragment_coach_calendar" />

    <fragment
        android:id="@+id/nav_coach_Reminder"
        android:name="com.example.athlete_monitor_system.Coach_Sys.coach_Reminder_Frag"
        android:label="@string/reminder"
        tools:layout="@layout/fragment_athlete__reminder_"/>

    <fragment
        android:id="@+id/nav_coach_leaderboard"
        android:name="com.example.athlete_monitor_system.Coach_Sys.coach_LB_Frag"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_coach_leaderboard" />

    <fragment
        android:id="@+id/nav_coach_chat"
        android:name="com.example.athlete_monitor_system.Coach_Sys.coach_Chatroom_Frag"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_room" />

    <fragment
        android:id="@+id/nav_coach_health"
        android:name="com.example.athlete_monitor_system.Coach_Sys.coach_Health_Frag"
        android:label="@string/title_health"
        tools:layout="@layout/activity_coach_health_data" />
</navigation>