<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkcolor">

    <RelativeLayout
        android:id="@+id/infor_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/textView20"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/height"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="40dp"
            android:layout_below="@+id/name"
            android:layout_toEndOf="@id/textView19"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="40dp"
            android:layout_below="@id/height"
            android:layout_toEndOf="@id/textView15"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/waistline"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView11"
            android:layout_below="@+id/weight"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/muscle_mass"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_below="@id/waistline"
            android:layout_toEndOf="@id/textView13"
            android:ems="10"
            android:inputType="number"
            android:text="" />

        <EditText
            android:id="@+id/fat_mass"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_below="@id/muscle_mass"
            android:layout_toEndOf="@id/textView13"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView20"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/height"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView19"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/weight"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView15"
            android:gravity="center"
            android:text="@string/waist_line"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/textView11"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/muscle_mass"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/textView13"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/fat_mass"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/SUBMIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView14"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/submit"/>
    </RelativeLayout>


</RelativeLayout>