<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkcolor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userInfor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_centerInParent="true"
        android:layout_above="@id/music"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/music"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/coach"
        android:textColor="@color/btnText"
        android:background="@color/btnColor"
        android:elevation="20dp"
        android:text="@string/music"
        android:textStyle="bold"
        android:textSize="25sp" />

    <Button
        android:id="@+id/coach"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/athlete"
        android:textColor="@color/btnText"
        android:background="@color/btnColor"
        android:elevation="20dp"
        android:text="@string/coach"
        android:textStyle="bold"
        android:textSize="25sp" />

    <Button
        android:id="@+id/athlete"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:textColor="@color/btnText"
        android:background="@color/btnColor"
        android:elevation="20dp"
        android:text="@string/athlete"
        android:textStyle="bold"
        android:textSize="25sp"  />


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shop"
        android:textColor="@color/btnText"
        android:background="@color/btnColor"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:text="@string/logout" />

    <Button
        android:id="@+id/shop"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_below="@id/athlete"
        android:layout_centerInParent="true"
        android:textColor="@color/btnText"
        android:background="@color/btnColor"
        android:elevation="20dp"
        android:layout_marginTop="25dp"
        android:text="shop"
        android:textStyle="bold"
        android:textSize="25sp" />
</RelativeLayout>